--- a/WebContent/partials/session-manager.html
+++ b/WebContent/partials/session-manager.html
@@ -15,6 +15,7 @@
 	            </div>
 	        </div>
 	    </div>
+	    {{coreSession}}
 	    <div class="panel panel-primary"  ng-if="inBuildingMode" >
 			<div class="panel-heading">Building New Session</div>
 			<div class="panel-body">
