--- a/WebContent/partials/new-session.html
+++ b/WebContent/partials/new-session.html
@@ -25,7 +25,7 @@
 				<div class="panel-heading">Session Rules</div>
 				<div class="panel-body">
 					<div class="list-group">
-						<table class="flat-table flat-table-1" 
+						<table class="table table-striped table-bordered table-hover dataTable no-footer" 
 							tr-ng-grid=""
 							items="selectedNewRules" 
 							page-items="5">
@@ -55,7 +55,7 @@
 				</div>
 				<div class="panel-body">
 					<div id="collapseRuleTable" class="panel-collapse collapse in">
-						<table class="flat-table flat-table-1" tr-ng-grid=""
+						<table class="table table-striped table-bordered table-hover dataTable no-footer" tr-ng-grid=""
 							items="availableRules" selected-items="selectedNewRules"
 							selection-mode="MultiRow" page-items="10">
 							<thead>
