--- a/WebContent/partials/rules.html
+++ b/WebContent/partials/rules.html
@@ -15,35 +15,17 @@
         <div class="form-group">
             <div class="row">
                 <br>
-                <table class="flat-table flat-table-1" tr-ng-grid="" items="rules" page-items="5">
+                <table class="table table-striped table-bordered table-hover dataTable no-footer" tr-ng-grid="" items="rules" page-items="5">
 				    <thead>
 				        <tr>
-				            <th field-name="id" display-name="Rule Id" enable-filtering="false" enable-sorting="false" cell-width="10em" display-align="right">
-				            </th>
 				            <th field-name="name" enable-filtering="false">
 				            </th>
 				            <th field-name="description" display-name="Description" enable-filtering="false">
 				            </th>
 				            <th field-name="consequence.score" display-name="Fraud Score" enable-filtering="false" display-align="center">
 				            </th>
-				            <th>
-			                    <div class="tr-ng-title">
-			                        schedule
-			                    </div>
-			                </th>
 				    	</tr>
 				    </thead>
-				    <tbody>
-			            <tr class="success">
-			                <td>
-			                    <div>
-			                        <button class="btn btn-primary" ng-click="">
-					                    Schedule {{gridDisplayItem.name}}
-					                </button>
-			                    </div>
-			                </td>
-			            </tr>
-			        </tbody>
 				</table>
             </div>
             <br>
