--- a/WebContent/partials/selected-session.html
+++ b/WebContent/partials/selected-session.html
@@ -45,7 +45,7 @@
 				</div>
 				<div class="panel-body">
 					<div id="collapseRuleTable" class="panel-collapse collapse in">
-						<table class="flat-table flat-table-1" tr-ng-grid=""
+						<table class="table table-striped table-bordered table-hover dataTable no-footer" tr-ng-grid=""
 							items="selectedSession.rules" page-items="5">
 							<thead>
 								<tr>
@@ -83,10 +83,16 @@
 		        </div>
 		        <div id="collapseExecutionsTable" class="panel-collapse collapse in">
 					<div class="panel-body">
-                          <table class="flat-table flat-table-1" tr-ng-grid="" items="execution.alerts" page-items="5">
+                          <table class="table table-striped table-bordered table-hover dataTable no-footer" tr-ng-grid="" items="execution.alerts" page-items="5">
 						    <thead>
 						        <tr>
+						            <th field-name="claimId" display-name="Rule Name" enable-filtering="false" enable-sorting="false" cell-width="10em" display-align="right">
+						            </th>
 						            <th field-name="ruleName" display-name="Rule Name" enable-filtering="false" enable-sorting="false" cell-width="10em" display-align="right">
+						            </th>recommendation
+						            <th field-name="recommendation" display-name="Rule Name" enable-filtering="false" enable-sorting="false" cell-width="10em" display-align="right">
+						            </th>
+						            <th field-name="score" display-name="Rule Name" enable-filtering="false" enable-sorting="false" cell-width="10em" display-align="right">
 						            </th>
 						    	</tr>
 						    </thead>
