--- a/WebContent/partials/new-rule.html
+++ b/WebContent/partials/new-rule.html
@@ -125,17 +125,15 @@
  </div>
  <!-- Add rule to the rule set -->
  <div class="row">
-     <div class="form-group add-rule" id="btn-cancel-rule">
-         <div class="btn-group-justified" role="group" aria-label="Justified button group">
-             <a class="btn btn-danger" role="button" ng-click="cancelNewRule()">Cancel</a>
-         </div>
-     </div>
+	<div class="col-xs-6" id="btn-cancel-rule">
+		<div class="btn-group-justified" role="group" aria-label="Justified button group">
+		    <a class="btn btn-danger" role="button" ng-click="cancelNewRule()">Cancel</a>
+		</div>
+	</div>
+	<div class="col-xs-6" id="btn-add-rule">
+		<div class="btn-group-justified" role="group" aria-label="Justified button group">
+		    <a class="btn btn-primary" role="button" ng-click="saveRule()">Save New Rule</a>
+		</div>
+	</div>
  </div>
  <br>
-<div class="row">
-    <div class="form-group add-rule" id="btn-add-rule">
-        <div class="btn-group-justified" role="group" aria-label="Justified button group">
-            <a class="btn btn-primary" role="button" ng-click="saveRule()">Save New Rule</a>
-        </div>
-    </div>
-</div>
