--- a/WebContent/WEB-INF/classes/partials/dashboard.html
+++ b/WebContent/WEB-INF/classes/partials/dashboard.html
@@ -13,37 +13,15 @@
 <div class="row">
     <div class="row">
 		<div class="col-lg-3 col-md-6">
-		    <div class="panel panel-primary">
-		        <div class="panel-heading">
-		            <div class="row">
-		                <div class="col-xs-3">
-		                    <i class="fa fa-comments fa-5x"></i>
-		                </div>
-		                <div class="col-xs-9 text-right">
-		                    <div class="huge">26</div>
-		                    <div>New Comments!</div>
-		                </div>
-		            </div>
-		        </div>
-		        <a href="#">
-		            <div class="panel-footer">
-		                <span class="pull-left">View Details</span>
-		                <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-		                <div class="clearfix"></div>
-		            </div>
-		        </a>
-		    </div>
-		</div>
-		<div class="col-lg-3 col-md-6">
 		    <div class="panel panel-green">
 		        <div class="panel-heading">
 		            <div class="row">
 		                <div class="col-xs-3">
-		                    <i class="fa fa-tasks fa-5x"></i>
+		                    <i class="fa fa-medkit fa-5x"></i>
 		                </div>
 		                <div class="col-xs-9 text-right">
 		                    <div class="huge">12</div>
-		                    <div>New Tasks!</div>
+		                    <div>New Claims</div>
 		                </div>
 		            </div>
 		        </div>
@@ -61,11 +39,11 @@
 		        <div class="panel-heading">
 		            <div class="row">
 		                <div class="col-xs-3">
-		                    <i class="fa fa-shopping-cart fa-5x"></i>
+		                    <i class="fa fa-calendar fa-5x"></i>
 		                </div>
 		                <div class="col-xs-9 text-right">
-		                    <div class="huge">124</div>
-		                    <div>New Orders!</div>
+		                    <div class="medium">Execution Schedule</div>
+		                    <div></div>
 		                </div>
 		            </div>
 		        </div>
@@ -83,11 +61,99 @@
 		        <div class="panel-heading">
 		            <div class="row">
 		                <div class="col-xs-3">
+		                    <i class="fa fa-bomb fa-5x"></i>
+		                </div>
+		                <div class="col-xs-9 text-right">
+		                    <div class="huge">3</div>
+		                    <div>New Alerts</div>
+		                </div>
+		            </div>
+		        </div>
+		        <a href="#">
+		            <div class="panel-footer">
+		                <span class="pull-left">View Details</span>
+		                <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+		                <div class="clearfix"></div>
+		            </div>
+		        </a>
+		    </div>
+		</div>
+		<div class="col-lg-3 col-md-6">
+		    <div class="panel panel-primary">
+		        <div class="panel-heading">
+		            <div class="row">
+		                <div class="col-xs-3">
 		                    <i class="fa fa-support fa-5x"></i>
 		                </div>
 		                <div class="col-xs-9 text-right">
-		                    <div class="huge">13</div>
-		                    <div>Support Tickets!</div>
+		                    <div class="huge">2</div>
+		                    <div>Active Sessions</div>
+		                </div>
+		            </div>
+		        </div>
+		        <a href="#">
+		            <div class="panel-footer">
+		                <span class="pull-left">View Details</span>
+		                <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+		                <div class="clearfix"></div>
+		            </div>
+		        </a>
+		    </div>
+		</div>
+		<div class="col-lg-3 col-md-6">
+		    <div class="panel panel-info">
+		        <div class="panel-heading">
+		            <div class="row">
+		                <div class="col-xs-3">
+		                    <i class="fa fa-clipboard  fa-5x"></i>
+		                </div>
+		                <div class="col-xs-9 text-right">
+		                    <div class="huge">50</div>
+		                    <div>Claims Score Board</div>
+		                </div>
+		            </div>
+		        </div>
+		        <a href="#">
+		            <div class="panel-footer">
+		                <span class="pull-left">View Details</span>
+		                <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+		                <div class="clearfix"></div>
+		            </div>
+		        </a>
+		    </div>
+		</div>
+		<div class="col-lg-3 col-md-6">
+		    <div class="panel panel-warning">
+		        <div class="panel-heading">
+		            <div class="row">
+		                <div class="col-xs-3">
+		                    <i class="fa fa-clipboard  fa-5x"></i>
+		                </div>
+		                <div class="col-xs-9 text-right">
+		                    <div class="huge">23</div>
+		                    <div>Rule Statistics</div>
+		                </div>
+		            </div>
+		        </div>
+		        <a href="#">
+		            <div class="panel-footer">
+		                <span class="pull-left">View Details</span>
+		                <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+		                <div class="clearfix"></div>
+		            </div>
+		        </a>
+		    </div>
+		</div>
+		<div class="col-lg-3 col-md-6">
+		    <div class="panel panel-success">
+		        <div class="panel-heading">
+		            <div class="row">
+		                <div class="col-xs-3">
+		                    <i class="fa fa-clipboard  fa-5x"></i>
+		                </div>
+		                <div class="col-xs-9 text-right">
+		                    <div class="huge">23</div>
+		                    <div>Backward Chaining Model</div>
 		                </div>
 		            </div>
 		        </div>
