APD-47 Session UI Version 2

--- a/WebContent/WEB-INF/classes/partials/rules.html
+++ b/WebContent/WEB-INF/classes/partials/rules.html
@@ -15,7 +15,12 @@
 		</div>
     </div>
 </div>
-<div class="col-lg-10">
+<div class="row row-centered">
+	<div data-ng-show="loadingRules">
+	    <i class="fa fa-spinner fa-spin fa-5x"></i>
+	</div>
+</div>
+<div class="col-lg-10" data-ng-show="!loadingRules">
     <form name="rules" role="form">
         <div class="form-group">
             <div class="row">
@@ -40,4 +45,12 @@
             </div>
         </div>
     </form>
+</div>
+{{loadingRules}}
+<div data-ng-show="!loadingRules">
+    <i class="fa fa-cogs fa-4x"></i>
+</div>
+{{loadingRules}}
+<div data-ng-show="loadingRules">
+    <i class="fa fa-cogs fa-4x"></i>
 </div>
