--- a/WebContent/WEB-INF/classes/css/main.css
+++ b/WebContent/WEB-INF/classes/css/main.css
@@ -359,3 +359,14 @@ input.mini {
 .panel-group .panel {
   overflow: visible;
 }
+.row-centered {
+    text-align:center;
+}
+.col-centered {
+    display:inline-block;
+    float:none;
+    /* reset the text-align */
+    text-align:left;
+    /* inline-block space fix */
+    margin-right:-4px;
+}
