--- a/WebContent/partials/new-session.html
+++ b/WebContent/partials/new-session.html
@@ -16,6 +16,15 @@
 		                    </div>
 		                </div>
 		            </div>
+		            <div class="row">
+		                <div class="form-group add-rule">
+		                    <div class="btn-group-justified" role="group" aria-label="Justified button group">
+		                        <a class="btn btn-danger" role="button" ng-click="cancelNewSession()">
+		                       	Cancel New Session
+		                        </a>
+		                    </div>
+		                </div>
+		            </div>
 				</div>
 			</div>
 		</div>
