--- a/WebContent/partials/selected-session.html
+++ b/WebContent/partials/selected-session.html
@@ -1,50 +1,108 @@
-<div class="col-lg-12">
-	<!-- First row -->
-    <div class="row">
-        <div class="col-xs-3">
-			<div class="panel panel-primary panel-rounded">
-				<div class="panel-heading">Creation Date</div>
-				<div class="panel-body">
-					{{selectedSession.creationDateTime| date:'EEEE, MMMM d, y'}}
-				</div>
-			</div>
-		</div>
-		<div class="col-xs-3">
-			<div class="panel panel-primary panel-rounded">
-				<div class="panel-heading">Creation Time</div>
-				<div class="panel-body">
-					{{selectedSession.creationDateTime| date:'shortTime'}}
-				</div>
-			</div>
-		</div>
-		<div class="col-xs-3">
-			<div class="panel panel-primary panel-rounded">
-				<div class="panel-heading">Number of Alerts Raised</div>
-				<div class="panel-body">
-					{{selectedSession.totalNumberOfAlerts}}
-				</div>
-			</div>
-		</div>
-		<div class="col-xs-3">
-			<div class="panel panel-primary panel-rounded">
-				<div class="panel-heading">Number of Rules Fired</div>
-				<div class="panel-body">
-					{{selectedSession.totalNumberOfRulesFired}}
-				</div>
-			</div>
-		</div>
+<div class="row">
+	<!-- Back Button -->
+<!-- Number Rules -->
+	<div class="col-md-2">
+	    <div class="panel panel-danger">
+	        <div class="panel-heading">
+	            <div class="row btn" role="button" ng-click="unselectSession()">
+	                <div class="col-xs-4">
+	                    <i class="fa fa-angle-double-left fa-5x"></i>
+	                </div>
+	                <div class="col-xs-4">
+	                    <i class="fa fa-angle-double-left fa-5x"></i>
+	                </div>
+	            </div>
+	        </div>
+	    </div>
 	</div>
-	<!-- selected rules -->
-	<div class="row">
-		<div class="col-xs-12">
-			<div class="panel panel-info">
-				<div class="panel-heading" data-toggle="collapse" data-target="#collapseRuleTable" aria-expanded="false" aria-controls="collapseExample">
-					<span>
-					  Session Rules
-					</span>
-				</div>
-				<div class="panel-body">
-					<div id="collapseRuleTable" class="panel-collapse collapse in">
+	<!-- Number Rules -->
+	<div class="col-md-3">
+	    <div class="panel panel-info">
+	        <div class="panel-heading">
+	            <div class="row">
+	                <div class="col-xs-3">
+	                    <i class="fa fa-table fa-4x"></i>
+	                </div>
+	                <div class="col-xs-9 text-right">
+	                    <div class="huge">{{selectedSession.numberOfRules}}</div>
+	                    <div></div>
+	                </div>
+	            </div>
+	        </div>
+	        <a href="#">
+	            <div class="panel-footer">
+	                <span class="pull-left">Package Rules</span>
+	                <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+	                <div class="clearfix"></div>
+	            </div>
+	        </a>
+	    </div>
+	</div>
+	
+	<!-- Alerts -->
+	<div class="col-md-3">
+	    <div class="panel panel-danger">
+	        <div class="panel-heading">
+	            <div class="row">
+	                <div class="col-xs-3">
+	                    <i class="fa fa-bomb fa-4x"></i>
+	                </div>
+	                <div class="col-xs-9 text-right">
+	                    <div class="huge">{{selectedSession.totalNumberOfAlerts}}</div>
+	                    <div></div>
+	                </div>
+	            </div>
+	        </div>
+	        <a href="#">
+	            <div class="panel-footer">
+	                <span class="pull-left">Alerts</span>
+	                <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+	                <div class="clearfix"></div>
+	            </div>
+	        </a>
+	    </div>
+	</div>
+	<!-- Executions -->
+	<div class="col-md-3">
+	    <div class="panel panel-yellow">
+	        <div class="panel-heading">
+	            <div class="row">
+	                <div class="col-xs-3">
+	                	<div data-ng-show="!loadingExecution">
+		                    <i class="fa fa-cogs fa-4x"></i>
+		                </div>
+		                <div data-ng-show="loadingExecution">
+		                    <i class="fa fa-cog fa-spin fa-4x"></i>
+		                </div>
+	                </div>
+	                <div class="col-xs-9 text-right">
+	                    <div class="huge">{{selectedSession.totalNumberOfExecutions}}</div>
+	                    <div></div>
+	                </div>
+	            </div>
+	        </div>
+	        <a href="#">
+	            <div class="panel-footer">
+	                <span class="pull-left">Package Executions</span>
+	                <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+	                <div class="clearfix"></div>
+	            </div>
+	        </a>
+	    </div>
+	</div>
+</div>
+<!--  End of Dashboard -->
+<!-- Package  rules -->
+<div class="col-lg-12">
+	<div class="panel panel-info">
+		<div class="panel-heading" data-toggle="collapse" data-target="#collapsePackageRules" aria-expanded="false" aria-controls="collapseExample">
+			<h1 class="panel-title">Package Rules</h1>
+		</div>
+		<div class="panel-body">
+			<div class="row">
+				<div id="collapsePackageRules" class="panel-collapse collapse">
+					<!-- Rules Table -->
+					<div class="col-md-8">
 						<table class="table table-striped table-bordered table-hover dataTable no-footer" tr-ng-grid=""
 							items="selectedSession.rules" page-items="5">
 							<thead>
@@ -58,46 +116,283 @@
 							</thead>
 						</table>
 					</div>
-					<div class="row">
-						<div class="form-group add-rule" id="btn-add-rule">
-							<div class="btn-group-justified" role="group"
-								aria-label="Justified button group">
-								<a class="btn btn-danger" role="button"
-									ng-click="executeRules(selectedSession.id)">Execute Rules</a>
+					<!--End of  Rules -->
+					<!-- Rule info -->
+					<div class="col-md-4">
+						<div class="row row-centered">
+							<div class="col-md-12">
+							    <div class="panel panel-danger">
+							        <div class="panel-heading">
+							            <div class="row btn" role="button" ng-click="executeRules(selectedSession.id)">
+							                <div class="col-xs-12" data-ng-show="!loadingExecution">
+							                    <i class="fa fa-cogs fa-5x"></i>
+							                </div>
+							                <div class="col-xs-12" data-ng-show="loadingExecution">
+							                    <i class="fa fa-cog fa-spin fa-5x"></i>
+							                </div>
+							            </div>
+							        </div>
+							        <a href="#">
+							            <div class="panel-footer">
+							                <span class="center">Fire Rules</span>
+							            </div>
+							        </a>
+							    </div>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-md-12">
+							    <div class="panel panel-info">
+							        <div class="panel-heading">
+							            <div class="row">
+							                <div class="col-xs-3">
+							                    <i class="fa fa-table fa-4x"></i>
+							                </div>
+							                <div class="col-xs-9 text-right">
+							                    <div class="huge">21</div>
+							                    <div></div>
+							                </div>
+							            </div>
+							        </div>
+							        <a href="#">
+							            <div class="panel-footer">
+							                <span class="pull-left">Stat</span>
+							                <div class="clearfix"></div>
+							            </div>
+							        </a>
+							    </div>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-md-12">
+							    <div class="panel panel-info">
+							        <div class="panel-heading">
+							            <div class="row">
+							                <div class="col-xs-3">
+							                    <i class="fa fa-table fa-4x"></i>
+							                </div>
+							                <div class="col-xs-9 text-right">
+							                    <div class="huge">2</div>
+							                    <div></div>
+							                </div>
+							            </div>
+							        </div>
+							        <a href="#">
+							            <div class="panel-footer">
+							                <span class="pull-left">Stat</span>
+							                <div class="clearfix"></div>
+							            </div>
+							        </a>
+							    </div>
 							</div>
 						</div>
 					</div>
+					<!-- End of Rule info -->
 				</div>
 			</div>
 		</div>
 	</div>
-	
-	<!-- Executions row -->
-	<div class="row">
-		<div class="col-xs-12">
-			<div class="panel panel-info" ng-repeat="execution in selectedSession.executions">
-				<div class="panel-heading hover-link" data-toggle="collapse" data-parent="false" data-target="#collapseExecutionsTable">
-		          	<h4 class="panel-title">
-		            Executions {{execution.timeStamp| date:'shortTime'}}
-		          	</h4>
-		        </div>
-		        <div id="collapseExecutionsTable" class="panel-collapse collapse in">
-					<div class="panel-body">
-                          <table class="table table-striped table-bordered table-hover dataTable no-footer" tr-ng-grid="" items="execution.alerts" page-items="5">
-						    <thead>
-						        <tr>
-						            <th field-name="claimId" display-name="Rule Name" enable-filtering="false" enable-sorting="false" cell-width="10em" display-align="right">
-						            </th>
-						            <th field-name="ruleName" display-name="Rule Name" enable-filtering="false" enable-sorting="false" cell-width="10em" display-align="right">
-						            </th>recommendation
-						            <th field-name="recommendation" display-name="Rule Name" enable-filtering="false" enable-sorting="false" cell-width="10em" display-align="right">
-						            </th>
-						            <th field-name="score" display-name="Rule Name" enable-filtering="false" enable-sorting="false" cell-width="10em" display-align="right">
-						            </th>
-						    	</tr>
-						    </thead>
+</div>
+
+<!-- Package Executions -->
+<div class="col-lg-12">
+	<div class="panel panel-yellow">
+		<div class="panel-heading" data-toggle="collapse" data-target="#collapseExecutions" aria-expanded="false" aria-controls="collapseExample">
+			<h1 class="panel-title">Executions</h1>
+		</div>
+		<div class="panel-body">
+			<div class="row">
+				<div id="collapseExecutions" class="panel-collapse collapse">
+					<!-- Executions Table -->
+					<div class="col-md-8">
+						<table class="table table-striped table-bordered table-hover dataTable no-footer" tr-ng-grid=""
+							items="selectedSession.executions" page-items="5">
+							<thead>
+								<tr>
+									<th field-name="formattedDate" enable-filtering="false"></th>
+									<th field-name="numberOfRulesFired" enable-filtering="false"></th>
+									<th field-name="factCount" enable-filtering="false"></th>
+									<th field-name="numberOfAlerts" enable-filtering="false"></th>
+								</tr>
+							</thead>
 						</table>
 					</div>
+					<!--End of Executions Table -->
+					<!-- Rule info -->
+					<div class="col-md-4">
+						<div class="row">
+							<div class="col-md-12">
+							    <div class="panel panel-info">
+							        <div class="panel-heading">
+							            <div class="row">
+							                <div class="col-xs-3">
+							                    <i class="fa fa-table fa-4x"></i>
+							                </div>
+							                <div class="col-xs-9 text-right">
+							                    <div class="huge">12</div>
+							                    <div></div>
+							                </div>
+							            </div>
+							        </div>
+							        <a href="#">
+							            <div class="panel-footer">
+							                <span class="pull-left">Time to run package</span>
+							                <div class="clearfix"></div>
+							            </div>
+							        </a>
+							    </div>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-md-12">
+							    <div class="panel panel-info">
+							        <div class="panel-heading">
+							            <div class="row">
+							                <div class="col-xs-3">
+							                    <i class="fa fa-table fa-4x"></i>
+							                </div>
+							                <div class="col-xs-9 text-right">
+							                    <div class="huge">21</div>
+							                    <div></div>
+							                </div>
+							            </div>
+							        </div>
+							        <a href="#">
+							            <div class="panel-footer">
+							                <span class="pull-left">Stat</span>
+							                <div class="clearfix"></div>
+							            </div>
+							        </a>
+							    </div>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-md-12">
+							    <div class="panel panel-info">
+							        <div class="panel-heading">
+							            <div class="row">
+							                <div class="col-xs-3">
+							                    <i class="fa fa-table fa-4x"></i>
+							                </div>
+							                <div class="col-xs-9 text-right">
+							                    <div class="huge">2</div>
+							                    <div></div>
+							                </div>
+							            </div>
+							        </div>
+							        <a href="#">
+							            <div class="panel-footer">
+							                <span class="pull-left">Stat</span>
+							                <div class="clearfix"></div>
+							            </div>
+							        </a>
+							    </div>
+							</div>
+						</div>
+					</div>
+					<!-- End of Rule info -->
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+<!-- Package Alerts -->
+<div class="col-lg-12">
+	<div class="panel panel-danger">
+		<div class="panel-heading" data-toggle="collapse" data-target="#collapseAlerts" aria-expanded="false" aria-controls="collapseExample">
+			<h1 class="panel-title">Alerts</h1>
+		</div>
+		<div class="panel-body">
+			<div class="row">
+				<div id="collapseAlerts" class="panel-collapse collapse">
+					<!-- Executions Table -->
+					<div class="col-md-8">
+						<table class="table table-striped table-bordered table-hover dataTable no-footer" tr-ng-grid=""
+							items="selectedSession.alerts" page-items="5">
+							<thead>
+								<tr>
+									<th field-name="claimId" enable-filtering="false"></th>
+									<th field-name="ruleName" enable-filtering="false"></th>
+									<th field-name="recommendation" enable-filtering="false"></th>
+									<th field-name="score" enable-filtering="false"></th>
+								</tr>
+							</thead>
+						</table>
+					</div>
+					<!--End of Alerts Table -->
+					<!-- Alerts info -->
+					<div class="col-md-4">
+						<div class="row">
+							<div class="col-md-12">
+							    <div class="panel panel-info">
+							        <div class="panel-heading">
+							            <div class="row">
+							                <div class="col-xs-3">
+							                    <i class="fa fa-table fa-4x"></i>
+							                </div>
+							                <div class="col-xs-9 text-right">
+							                    <div class="huge">12</div>
+							                    <div></div>
+							                </div>
+							            </div>
+							        </div>
+							        <a href="#">
+							            <div class="panel-footer">
+							                <span class="pull-left">Alerts</span>
+							                <div class="clearfix"></div>
+							            </div>
+							        </a>
+							    </div>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-md-12">
+							    <div class="panel panel-info">
+							        <div class="panel-heading">
+							            <div class="row">
+							                <div class="col-xs-3">
+							                    <i class="fa fa-table fa-4x"></i>
+							                </div>
+							                <div class="col-xs-9 text-right">
+							                    <div class="huge">21</div>
+							                    <div></div>
+							                </div>
+							            </div>
+							        </div>
+							        <a href="#">
+							            <div class="panel-footer">
+							                <span class="pull-left">Stat</span>
+							                <div class="clearfix"></div>
+							            </div>
+							        </a>
+							    </div>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-md-12">
+							    <div class="panel panel-info">
+							        <div class="panel-heading">
+							            <div class="row">
+							                <div class="col-xs-3">
+							                    <i class="fa fa-table fa-4x"></i>
+							                </div>
+							                <div class="col-xs-9 text-right">
+							                    <div class="huge">2</div>
+							                    <div></div>
+							                </div>
+							            </div>
+							        </div>
+							        <a href="#">
+							            <div class="panel-footer">
+							                <span class="pull-left">Stat</span>
+							                <div class="clearfix"></div>
+							            </div>
+							        </a>
+							    </div>
+							</div>
+						</div>
+					</div>
+					<!-- End of Alert info -->
 				</div>
 			</div>
 		</div>
