--- a/WebContent/partials/package-builder.html
+++ b/WebContent/partials/package-builder.html
@@ -1,25 +1,26 @@
+{{newPackage.rules}}
 <div class="col-lg-12">
 	<div class="row">
 		<div class="col-xs-4">
 			<div class="panel panel-info">
-				<div class="panel-heading">Session Details</div>
+				<div class="panel-heading">Package Details</div>
 				<div class="panel-body">
 					<div class="row">
-						<label class="medium" for="SessionName">Schedule TODO</label> <label
-							class="medium" for="SessionName">Frequency (Dropdown)</label> <label
-							class="medium" for="SessionName">Time picker</label>
+						<label class="medium" for=PackageName">Schedule TODO</label> <label
+							class="medium" for="PackageName">Frequency (Dropdown)</label> <label
+							class="medium" for="PackageName">Time picker</label>
 					</div>
 					<div class="row">
 		                <div class="form-group add-rule">
 		                    <div class="btn-group-justified" role="group" aria-label="Justified button group">
-		                        <a class="btn btn-primary" role="button" ng-click="saveNewSession()">Save New Session</a>
+		                        <a class="btn btn-primary" role="button" ng-click="saveNewPackage()">Save New Package</a>
 		                    </div>
 		                </div>
 		            </div>
 		            <div class="row">
 		                <div class="form-group add-rule">
 		                    <div class="btn-group-justified" role="group" aria-label="Justified button group">
-		                        <a class="btn btn-danger" role="button" ng-click="cancelNewSession()">
+		                        <a class="btn btn-danger" role="button" ng-click="cancelNewPackage()">
 		                       	Cancel New Session
 		                        </a>
 		                    </div>
@@ -31,7 +32,7 @@
 
 		<div class="col-xs-8">
 			<div class="panel panel-info">
-				<div class="panel-heading">Session Rules</div>
+				<div class="panel-heading">Package Rules</div>
 				<div class="panel-body">
 					<div class="list-group">
 						<table class="table table-striped table-bordered table-hover dataTable no-footer" 
@@ -79,11 +80,11 @@
 						</table>
 					</div>
 					<div class="row">
-						<div class="form-group add-rule" id="btn-add-rule">
+						<div class="form-group add-rule" id="btn-add-package">
 							<div class="btn-group-justified" role="group"
-								aria-label="Justified button group" ng-if="newRuleMode == true">
+								aria-label="Justified button group">
 								<a class="btn btn-primary" role="button"
-									ng-click="saveSession('')">Save New Rule</a>
+									ng-click="savePackage('')">Save New Rule</a>
 							</div>
 						</div>
 					</div>
