--- a/WebContent/partials/rule-manager.html
+++ b/WebContent/partials/rule-manager.html
@@ -16,7 +16,8 @@
 	    <i class="fa fa-spinner fa-spin fa-5x"></i>
 	</div>
 </div>
-
+{{loadingRules}}
+{{rules}}
  <accordion close-others="oneAtATime">
     <accordion-group heading="{{rule.name}}" ng-repeat="rule in rules">
         <div class="row">
