--- a/WebContent/partials/package-builder.html
+++ b/WebContent/partials/package-builder.html
@@ -21,7 +21,7 @@
 		                <div class="form-group add-rule">
 		                    <div class="btn-group-justified" role="group" aria-label="Justified button group">
 		                        <a class="btn btn-danger" role="button" ng-click="cancelNewPackage()">
-		                       	Cancel New Session
+		                       	Cancel New Pacakage
 		                        </a>
 		                    </div>
 		                </div>
@@ -45,7 +45,9 @@
 									<th field-name="name" enable-filtering="false"></th>
 									<th field-name="description" display-name="Description"
 										enable-filtering="false"></th>
-									<th field-name="consequence.score" display-name="Fraud Score"
+									<th field-name="setting.recommendation" display-name="Investigation Recommendation"
+										enable-filtering="false" display-align="center"></th>
+									<th field-name="setting.score" display-name="Fraud Score"
 										enable-filtering="false" display-align="center"></th>
 								</tr>
 							</thead>
@@ -73,7 +75,9 @@
 									<th field-name="name" enable-filtering="false"></th>
 									<th field-name="description" display-name="Description"
 										enable-filtering="false"></th>
-									<th field-name="consequence.score" display-name="Fraud Score"
+									<th field-name="setting.recommendation" display-name="Investigation Recommendation"
+										enable-filtering="false" display-align="center"></th>
+									<th field-name="setting.score" display-name="Fraud Score"
 										enable-filtering="false" display-align="center"></th>
 								</tr>
 							</thead>
