--- a/WebContent/partials/dashboard.html
+++ b/WebContent/partials/dashboard.html
@@ -88,7 +88,7 @@
 		                </div>
 		                <div class="col-xs-9 text-right">
 		                    <div class="huge">2</div>
-		                    <div>Active Sessions</div>
+		                    <div>Active Packages</div>
 		                </div>
 		            </div>
 		        </div>
