--- a/WebContent/WEB-INF/classes/partials/package-manager.html
+++ b/WebContent/WEB-INF/classes/partials/package-manager.html
@@ -7,8 +7,8 @@
 		</ol>
 		<div class="col-md-3"
 			data-ng-show="loadingPackages">
-			<div class="panel panel-yellow">
-				<div class="panel-heading">
+			<div class="panel panel-default">
+				<div class="panel-heading-custom-green">
 					<div class="row">
 						<div class="col-xs-3">
 							<i class="fa fa-cog fa-spin fa-4x"></i>
@@ -28,12 +28,10 @@
 				</a>
 			</div>
 		</div>
-		Package {{loadingPackages}}
-		<div class="row row-centered" data-ng-show="!loadingPackages">
 		
-			<div class="panel panel-primary" ng-if="!isSelecetedPackage()">
-			
-				<div class="panel-heading">
+		<div class="row" data-ng-show="!loadingPackages">
+			<div class="panel panel-default" ng-if="!isSelecetedPackage()">
+				<div class="panel-heading-custom-green">
 					<h1 class="panel-title">All Packages</h1>
 				</div>
 				<div class="panel-body">
@@ -49,8 +47,8 @@
 		</div>
 
 		<div class="row row-centered" data-ng-show="isSelecetedPackage()">
-			<div class="panel panel-info">
-				<div class="panel-heading" data-toggle="collapse"
+			<div class="panel panel-default">
+				<div class="panel-heading-custom-green" data-toggle="collapse"
 					data-target="#collapseStats" aria-expanded="false"
 					aria-controls="collapseExample">
 					<span> Rule Frequency Statistics </span>
@@ -60,8 +58,8 @@
 					<div id="collapseStats" class="panel-collapse collapse">
 						<div id="dashboard"></div>
 						<div class="col-lg-8  col-centered" ng-if="!isSelecetedPackage()">
-							<div class="panel panel-green">
-								<div class="panel-heading">
+							<div class="panel panel-default">
+								<div class="panel-heading-custom-green">
 									<div class="row">
 										<div class="col-xs-3">
 											<i class="fa fa-clipboard fa-5x"></i>
@@ -76,8 +74,8 @@
 					</div>
 					<div class="col-lg-10  col-centered"
 						ng-if="isSelecetedPackage() && !objectExist(selectedPackage.executions)">
-						<div class="panel panel-red">
-							<div class="panel-heading">
+						<div class="panel panel-default">
+							<div class="panel-heading-custom-green">
 								<div class="row">
 									<div class="col-xs-3">
 										<i class="fa fa-bar-chart fa-5x"></i>
