--- a/WebContent/WEB-INF/classes/partials/package-selected.html
+++ b/WebContent/WEB-INF/classes/partials/package-selected.html
@@ -1,24 +1,11 @@
 <div class="row">
 	<!-- Back Button -->
 <!-- Number Rules -->
-	<div class="col-md-2">
-	    <div class="panel panel-danger">
-	        <div class="panel-heading">
-	            <div class="row btn" role="button" ng-click="unselectPackage()">
-	                <div class="col-xs-4">
-	                    <i class="fa fa-angle-double-left fa-5x"></i>
-	                </div>
-	                <div class="col-xs-4">
-	                    <i class="fa fa-angle-double-left fa-5x"></i>
-	                </div>
-	            </div>
-	        </div>
-	    </div>
-	</div>
+	
 	<!-- Number Rules -->
 	<div class="col-md-3">
-	    <div class="panel panel-info">
-	        <div class="panel-heading">
+	    <div class="panel panel-default">
+	        <div class="panel-heading-custom-green">
 	            <div class="row">
 	                <div class="col-xs-3">
 	                    <i class="fa fa-table fa-4x"></i>
@@ -41,8 +28,8 @@
 	
 	<!-- Alerts -->
 	<div class="col-md-3">
-	    <div class="panel panel-danger">
-	        <div class="panel-heading">
+	    <div class="panel panel-default">
+	        <div class="panel-heading-custom-green">
 	            <div class="row">
 	                <div class="col-xs-3">
 	                    <i class="fa fa-bomb fa-4x"></i>
@@ -64,8 +51,8 @@
 	</div>
 	<!-- Executions -->
 	<div class="col-md-3">
-	    <div class="panel panel-yellow">
-	        <div class="panel-heading">
+	    <div class="panel panel-default">
+	        <div class="panel-heading-custom-green">
 	            <div class="row">
 	                <div class="col-xs-3">
 	                	<div data-ng-show="!loadingExecution">
@@ -94,8 +81,8 @@
 <!--  End of Dashboard -->
 <!-- Package  rules -->
 <div class="col-lg-12">
-	<div class="panel panel-info">
-		<div class="panel-heading" data-toggle="collapse" data-target="#collapsePackageRules" aria-expanded="false" aria-controls="collapseExample">
+	<div class="panel panel-default">
+		<div class="panel-heading-custom-green" data-toggle="collapse" data-target="#collapsePackageRules" aria-expanded="false" aria-controls="collapseExample">
 			<h1 class="panel-title">Package Rules</h1>
 		</div>
 		<div class="panel-body">
@@ -123,8 +110,8 @@
 					<div class="col-md-4">
 						<div class="row row-centered">
 							<div class="col-md-12">
-							    <div class="panel panel-danger">
-							        <div class="panel-heading">
+							    <div class="panel panel-default">
+							        <div class="panel-heading-custom-orange">
 							            <div class="row btn" role="button" ng-click="executeRules(selectedPackage.id)">
 							                <div class="col-xs-12" data-ng-show="!loadingExecution">
 							                    <i class="fa fa-cogs fa-5x"></i>
@@ -144,8 +131,8 @@
 						</div>
 						<div class="row">
 							<div class="col-md-12">
-							    <div class="panel panel-info">
-							        <div class="panel-heading">
+							    <div class="panel panel-default">
+							        <div class="panel-heading-custom-green">
 							            <div class="row">
 							                <div class="col-xs-3">
 							                    <i class="fa fa-table fa-4x"></i>
@@ -167,8 +154,8 @@
 						</div>
 						<div class="row">
 							<div class="col-md-12">
-							    <div class="panel panel-info">
-							        <div class="panel-heading">
+							    <div class="panel panel-default">
+							        <div class="panel-heading-custom-green">
 							            <div class="row">
 							                <div class="col-xs-3">
 							                    <i class="fa fa-table fa-4x"></i>
@@ -198,8 +185,8 @@
 
 <!-- Package Executions -->
 <div class="col-lg-12">
-	<div class="panel panel-yellow">
-		<div class="panel-heading" data-toggle="collapse" data-target="#collapseExecutions" aria-expanded="false" aria-controls="collapseExample">
+	<div class="panel panel-default">
+		<div class="panel-heading-custom-green" data-toggle="collapse" data-target="#collapseExecutions" aria-expanded="false" aria-controls="collapseExample">
 			<h1 class="panel-title">Executions</h1>
 		</div>
 		<div class="panel-body">
