--- a/WebContent/css/main.css
+++ b/WebContent/css/main.css
@@ -5,368 +5,552 @@
  */
 
 /* Global Styles */
-
 body {
-    margin-top: 100px;
-    background-color: #222;
+	margin-top: 100px;
+	background-color: #222;
+	color: #444444;
 }
 
-@media(min-width:768px) {
-    body {
-        margin-top: 50px;
-    }
+@media ( min-width :768px) {
+	body {
+		margin-top: 50px;
+	}
 }
 
 #wrapper {
-    padding-left: 0;
+	padding-left: 0;
 }
 
 #page-wrapper {
-    width: 100%;
-    padding: 0;
-    background-color: #fff;
+	width: 100%;
+	padding: 0;
+	background-color: #fff;
 }
 
 .huge {
-    font-size: 50px;
-    line-height: normal;
+	font-size: 50px;
+	line-height: normal;
 }
 
 .large {
-    font-size: 30px;
-    line-height: normal;
+	font-size: 30px;
+	line-height: normal;
 }
 
 .medium {
-    font-size: 16px;
-    line-height: normal;
-
+	font-size: 18px;
+	line-height: normal;
 }
 
-@media(min-width:768px) {
-    #wrapper {
-        padding-left: 225px;
-    }
-
-    #page-wrapper {
-        padding: 10px;
-    }
+@media ( min-width :768px) {
+	#wrapper {
+		padding-left: 225px;
+	}
+	#page-wrapper {
+		padding: 10px;
+	}
 }
 
 /* Top Navigation */
-
 .top-nav {
-    padding: 0 15px;
+	padding: 0 15px;
 }
 
-.top-nav > li {
-    display: inline-block;
-    float: left;
+.top-nav>li {
+	display: inline-block;
+	float: left;
 }
 
 .top-nav>li>a {
-    padding-top: 15px;
-    padding-bottom: 15px;
-    line-height: 20px;
-    color: #fff;
+	padding-top: 15px;
+	padding-bottom: 15px;
+	line-height: 20px;
+	color: #fff;
 }
 
-.top-nav>li>a:hover,
-.top-nav>li>a:focus,
-.top-nav>.open>a,
-.top-nav>.open>a:hover,
-.top-nav>.open>a:focus {
-    color: #fff;
-    background-color: #000;
+.top-nav>li>a:hover, .top-nav>li>a:focus, .top-nav>.open>a, .top-nav>.open>a:hover,
+	.top-nav>.open>a:focus {
+	color: #fff;
+	background-color: #000;
 }
 
 .top-nav>.open>.dropdown-menu {
-    float: left;
-    position: absolute;
-    margin-top: 0;
-    border: 1px solid rgba(0,0,0,.15);
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
-    background-color: #fff;
-    -webkit-box-shadow: 0 6px 12px rgba(0,0,0,.175);
-    box-shadow: 0 6px 12px rgba(0,0,0,.175);
+	float: left;
+	position: absolute;
+	margin-top: 0;
+	border: 1px solid rgba(0, 0, 0, .15);
+	border-top-left-radius: 0;
+	border-top-right-radius: 0;
+	background-color: #fff;
+	-webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
+	box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
 }
 
 .top-nav>.open>.dropdown-menu>li>a {
-    white-space: normal;
+	white-space: normal;
 }
 
-
 ul.message-dropdown {
-    padding: 0;
-    max-height: 250px;
-    overflow-x: hidden;
-    overflow-y: auto;
+	padding: 0;
+	max-height: 250px;
+	overflow-x: hidden;
+	overflow-y: auto;
 }
 
 li.message-preview {
-    width: 275px;
-    border-bottom: 1px solid rgba(0,0,0,.15);
+	width: 275px;
+	border-bottom: 1px solid rgba(0, 0, 0, .15);
 }
 
 li.message-preview>a {
-    padding-top: 15px;
-    padding-bottom: 15px;
+	padding-top: 15px;
+	padding-bottom: 15px;
 }
 
 li.message-footer {
-    margin: 5px 0;
+	margin: 5px 0;
 }
 
 ul.alert-dropdown {
-    width: 200px;
+	width: 200px;
 }
 
 /* Side Navigation */
-
-@media(min-width:768px) {
-    .side-nav {
-        position: fixed;
-        top: 51px;
-        left: 225px;
-        width: 225px;
-        margin-left: -225px;
-        border: none;
-        border-radius: 0;
-        overflow-y: auto;
-        background-color: #222;
-    }
-
-    .side-nav>li>a {
-        width: 225px;
-    }
-
-    .side-nav li a:hover,
-    .side-nav li a:focus {
-        outline: none;
-        background-color: #000 !important;
-    }
+@media ( min-width :768px) {
+	.side-nav {
+		position: fixed;
+		top: 51px;
+		left: 225px;
+		width: 225px;
+		margin-left: -225px;
+		border: none;
+		border-radius: 0;
+		overflow-y: auto;
+		background-color: #222;
+	}
+	.side-nav>li>a {
+		width: 225px;
+	}
+	.side-nav li a:hover, .side-nav li a:focus {
+		outline: none;
+		background-color: #000 !important;
+	}
 }
 
 .side-nav>li>ul {
-    padding: 0;
+	padding: 0;
 }
 
 .side-nav>li>ul>li>a {
-    display: block;
-    padding: 10px 15px 10px 38px;
-    text-decoration: none;
-    color: #999;
+	display: block;
+	padding: 10px 15px 10px 38px;
+	text-decoration: none;
+	color: #999;
 }
 
 .side-nav>li>ul>li>a:hover {
-    color: #fff;
+	color: #fff;
 }
 
 /* Flot Chart Containers */
-
 .flot-chart {
-    display: block;
-    height: 400px;
+	display: block;
+	height: 400px;
 }
 
 .flot-chart-content {
-    width: 100%;
-    height: 100%;
+	width: 100%;
+	height: 100%;
 }
 
 /* Custom Colored Panels */
-
 .huge {
-    font-size: 40px;
+	font-size: 40px;
 }
 
 .panel-green {
-    border-color: #5cb85c;
+	border-color: #5cb85c;
 }
 
 .panel-green .panel-heading {
-    border-color: #5cb85c;
-    color: #fff;
-    background-color: #5cb85c;
+	border-color: #5cb85c;
+	color: #fff;
+	background-color: #5cb85c;
 }
 
 .panel-green a {
-    color: #5cb85c;
+	color: #5cb85c;
 }
 
 .panel-green a:hover {
-    color: #3d8b3d;
+	color: #3d8b3d;
 }
 
 .panel-red {
-    border-color: #d9534f;
+	border-color: #d9534f;
 }
 
 .panel-red .panel-heading {
-    border-color: #d9534f;
-    color: #fff;
-    background-color: #d9534f;
+	border-color: #d9534f;
+	color: #fff;
+	background-color: #d9534f;
 }
 
 .panel-red a {
-    color: #d9534f;
+	color: #d9534f;
 }
 
 .panel-red a:hover {
-    color: #b52b27;
+	color: #b52b27;
 }
 
 .panel-yellow {
-    border-color: #f0ad4e;
+	border-color: #f0ad4e;
 }
 
 .panel-yellow .panel-heading {
-    border-color: #f0ad4e;
-    color: #fff;
-    background-color: #f0ad4e;
+	border-color: #f0ad4e;
+	color: #fff;
+	background-color: #f0ad4e;
 }
 
 .panel-yellow a {
-    color: #f0ad4e;
+	color: #f0ad4e;
 }
 
 .panel-yellow a:hover {
-    color: #df8a13;
+	color: #df8a13;
 }
+
 .constraint-body {
-    margin-left: 3%;
-    margin-right: 3%;
+	margin-left: 3%;
+	margin-right: 3%;
 }
 
 .select-box {
-    line-height: 1;
-    height: 20px;
+	line-height: 1;
+	height: 20px;
 }
 
 hr {
-    border: 1px dashed #000;
-    margin-top: 10px;
-    margin-bottom: 10px;
+	border: 1px dashed #000;
+	margin-top: 10px;
+	margin-bottom: 10px;
 }
+
 .form-group {
-    margin-bottom: 0px;
+	margin-bottom: 0px;
 }
+
 .panel-heading {
-    padding: 5px 15px;
+	padding: 5px 15px;
 }
+
 .panel {
-    margin-bottom: 10px;
-    padding: 2px;
+	margin-bottom: 10px;
+	padding: 2px;
 }
+
 label {
-    margin-top: 5px;
+	margin-top: 5px;
 }
+
 label.green {
-    color: green;
-    margin-bottom: 3px;
+	color: green;
+	margin-bottom: 3px;
 }
+
 label.red {
-    color: red;
-    margin-bottom: 3px;
+	color: red;
+	margin-bottom: 3px;
 }
+
 label.blue {
-    color: #33A1DE;
-    margin-bottom: 3px;
+	color: #33A1DE;
+	margin-bottom: 3px;
 }
+
 span.large-glyphicon {
-    font-size: 2em;
+	font-size: 2em;
 }
+
 i.field-glyphy {
-    font-size: 1.3em;
+	font-size: 1.3em;
 }
+
 div.no-padding {
-    padding: 0px;
-    width: 15px;
+	padding: 0px;
+	width: 15px;
 }
+
 .blue {
-    color: #33A1DE;
+	color: #33A1DE;
 }
+
 .green {
-    color: green;
+	color: green;
 }
+
 .yellow {
-    color: #B87333;
+	color: #B87333;
 }
 
 hr {
-    color: #33A1DE;
-    background-color: #33A1DE;
-    height: 4px;
+	color: #33A1DE;
+	background-color: #33A1DE;
+	height: 4px;
 }
+
 hr.thinGreen {
-    color: green;
-    background-color: green;
-    height: 1px;
-    margin-left: 2%;
-    margin-right: 2%;
-    margin-top: 1%;
-    margin-bottom: 3%;
+	color: green;
+	background-color: green;
+	height: 1px;
+	margin-left: 2%;
+	margin-right: 2%;
+	margin-top: 1%;
+	margin-bottom: 3%;
 }
 
 .cursor-pointer {
-    cursor:pointer;
+	cursor: pointer;
 }
+
 .condition-glyphicon {
-    position: relative;
-    margin-top: 2%;
-    font-size: 16px;
-    margin-right: 5%;
+	position: relative;
+	margin-top: 2%;
+	font-size: 16px;
+	margin-right: 5%;
 }
+
 .popup {
-    padding: 0%, 2%, 2%,2%;
-    width: 100%;
-    border-color: green;
-    border-width: 1%;
+	padding: 0%, 2%, 2%, 2%;
+	width: 100%;
+	border-color: green;
+	border-width: 1%;
 }
+
 .popup-header {
-    padding: 0%;
-    background-color: green;
-    color: black;
-    font-size: 12px;
+	padding: 0%;
+	background-color: green;
+	color: black;
+	font-size: 12px;
 }
+
 .hide {
-    display: none;
+	display: none;
 }
+
 .display {
-    display: block;
+	display: block;
 }
 
 select.mini {
-    height: auto;
-    line-height: 12px;
-    padding: 0%;
+	height: auto;
+	line-height: 12px;
+	padding: 0%;
 }
+
 input.mini {
-    height: auto;
-    line-height: 12px;
-    padding: 0%;
+	height: auto;
+	line-height: 12px;
+	padding: 0%;
 }
+
 .min-padding {
-    padding: 0.5%;
+	padding: 0.5%;
 }
+
 .panel-rounded {
-	border-radius:10%;
-	text-align:center;
+	border-radius: 10%;
+	text-align: center;
 	margin: 10%;
 }
 
 .panel-group .panel {
-  overflow: visible;
+	overflow: visible;
 }
+
 .row-centered {
-    text-align:center;
+	text-align: center;
 }
+
 .col-centered {
+	display: inline-block;
+	float: none;
+	/* reset the text-align */
+	text-align: left;
+	/* inline-block space fix */
+	margin-right: -4px;
+}
+
+.horizontal-scroll {
+	width: 100%;
+	color: green;
+	white-space: nowrap;
+	overflow-y: hidden;
+	overflow-x: scroll;
+	-webkit-overflow-scrolling: touch;
+	padding: 1rem;
+}
+
+.inside-horizontal-scroll {
+	width: 20px;
+	display: inline;
+	&:
+	nth-child
+	(odd)
+	{
+	background-color
+	:
+	hotpink;
+}
+
+}
+.execution-box {
+	width: 100% height: auto;
+	overflow-x: scroll;
+	overflow-y: hidden;
+	white-space: nowrap;
+}
+
+.execution-item {
+	display: inline-block;
+	vertical-align: middle;
+	margin-left: 1%;
+	cursor: pointer;
+}
+
+#execution-item-heading{
+   
+}
+
+#execution-item-heading:hover {
+	background-color: #666666;
+}
+
+.small {
+	word-wrap: break-word;
+}
+
+#scroll-bar::-webkit-scrollbar-track {
+	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+	border-radius: 10px;
+	background-color: #F5F5F5;
+}
+
+#scroll-bar::-webkit-scrollbar {
+	width: 12px;
+	background-color: #F5F5F5;
+}
+
+#scroll-bar::-webkit-scrollbar-thumb {
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+	background-color: #00000;
+}
+
+
+/* over-writing panel heading bg color to cv custom colors */
+.panel-default > .panel-heading-custom-green {
+    background: #377d3c; 
+    color: #fff;
+    padding: 10px 15px;
+	border-bottom: 1px solid transparent;
+	border-top-left-radius: 3px;
+	border-top-right-radius: 3px;
+}
+
+.panel-default > .panel-heading-custom-orange {
+    background: #faa019; 
+    color: #fff;
+    padding: 10px 15px;
+	border-bottom: 1px solid transparent;
+	border-top-left-radius: 3px;
+	border-top-right-radius: 3px;
+}
+
+.panel-default > .panel-heading-custom-grey {
+    background: #939598; 
+    color: #fff;
+    padding: 10px 15px;
+	border-bottom: 1px solid transparent;
+	border-top-left-radius: 3px;
+	border-top-right-radius: 3px;
+}
+
+/*  new time line */
+
+body {
+    padding:25px;
+    font-family:sans-serif;
+}
+.timeline {
+    white-space:nowrap;
+    overflow-x: scroll;
+    padding:30px 0 10px 0;
+    position:relative;
+}
+
+.entry {
     display:inline-block;
-    float:none;
-    /* reset the text-align */
-    text-align:left;
-    /* inline-block space fix */
-    margin-right:-4px;
+    position:relative;
+	cursor: pointer;
+}
+
+.entry:after {
+    content:'';
+    display:block;
+    background:#eee;
+    width:13px;
+    height:13px;
+    border-radius:6px;
+    border:3px solid #06182E;
+    position:absolute;
+    left:50%;
+    top:-26px;
+    margin-left:-6px;
+}
+
+.entry-day {
+	content:'';
+    display:block;
+    background:#eee;
+    width:13px;
+    height:13px;
+    border-radius:6px;
+    border:3px solid #06182E;
+    position:absolute;
+    left:50%;
+    top:-36px;
+    margin-left:-6px;
+}
+
+.entry:before {
+    content:'';
+    display:block;
+    background:#06182E;
+    width:5px;
+    height:20px;
+    position:absolute;
+    left:50%;
+    top:-20px;
+    margin-left:-2px;
+}
+
+.bar {
+    height:4px;
+    background: #faa019;
+    width:100%;
+    position:relative;
+    top:13px;
+    left:0;
+}
+
+th {
+	background-color: #939598;
+	color: #fff;
+}
+.active {
+	color: #faa019;
+	font-weight: bold;
 }
