--- a/WebContent/partials/package-builder.html
+++ b/WebContent/partials/package-builder.html
@@ -1,15 +1,47 @@
-{{newPackage.rules}}
+<div class="col-lg-12">
+	<h1 class="page-header">Packages Builder</h1>
+	<ol class="breadcrumb">
+		<li class="active"><i class="fa fa-wrench"></i> Package Builder</li>
+	</ol>
+	<div class="col-md-3"
+		data-ng-show="loadingPackages">
+		<div class="panel panel-default">
+			<div class="panel-heading-custom-green">
+				<div class="row">
+					<div class="col-xs-3">
+						<i class="fa fa-cog fa-spin fa-4x"></i>
+					</div>
+					<div class="col-xs-9 text-right">
+						<div class="huge">Loading</div>
+						<div></div>
+					</div>
+				</div>
+			</div>
+			<a href="#">
+				<div class="panel-footer">
+					<span class="pull-left">Packages</span> <span class="pull-right"><i
+						class="fa fa-arrow-circle-right"></i></span>
+					<div class="clearfix"></div>
+				</div>
+			</a>
+		</div>
+	</div>
+</div>
+
 <div class="col-lg-12">
 	<div class="row">
 		<div class="col-xs-4">
-			<div class="panel panel-info">
-				<div class="panel-heading">Package Details</div>
+			<div class="panel panel-default">
+				<div class="panel-heading-custom-green">Package Details</div>
 				<div class="panel-body">
 					<div class="row">
-						<label class="medium" for=PackageName">Schedule TODO</label> <label
-							class="medium" for="PackageName">Frequency (Dropdown)</label> <label
-							class="medium" for="PackageName">Time picker</label>
+						<label class="medium" for="RuleName">Package Name</label>
 					</div>
+					<div class="row">
+						<input type="text" class="form-control"
+							placeholder="Enter Name" ng-model="newPackage.packageName" ng-required />
+					</div>
+					<br>
 					<div class="row">
 		                <div class="form-group add-rule">
 		                    <div class="btn-group-justified" role="group" aria-label="Justified button group">
@@ -17,57 +49,36 @@
 		                    </div>
 		                </div>
 		            </div>
-		            <div class="row">
-		                <div class="form-group add-rule">
-		                    <div class="btn-group-justified" role="group" aria-label="Justified button group">
-		                        <a class="btn btn-danger" role="button" ng-click="cancelNewPackage()">
-		                       	Cancel New Pacakage
-		                        </a>
-		                    </div>
-		                </div>
-		            </div>
-				</div>
-			</div>
-		</div>
-
-		<div class="col-xs-8">
-			<div class="panel panel-info">
-				<div class="panel-heading">Package Rules</div>
-				<div class="panel-body">
-					<div class="list-group">
-						<table class="table table-striped table-bordered table-hover dataTable no-footer" 
-							tr-ng-grid=""
-							items="selectedNewRules" 
-							page-items="5">
-							
-							<thead>
-								<tr>
-									<th field-name="name" enable-filtering="false"></th>
-									<th field-name="description" display-name="Description"
-										enable-filtering="false"></th>
-									<th field-name="setting.recommendation" display-name="Investigation Recommendation"
-										enable-filtering="false" display-align="center"></th>
-									<th field-name="setting.score" display-name="Fraud Score"
-										enable-filtering="false" display-align="center"></th>
-								</tr>
-							</thead>
-						</table>
+		            <div class="panel panel-default">
+						<div class="panel-heading-custom-green">Package Rules</div>
+						<div class="panel-body">
+							<div class="list-group">
+								<table class="table table-hover dataTable no-footer" 
+									tr-ng-grid=""
+									items="selectedNewRules" 
+									page-items="10">
+									<thead>
+										<tr>
+											<th field-name="name" enable-filtering="false"></th>
+										</tr>
+									</thead>
+								</table>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
-	<div class="row">
-		<div class="col-xs-12">
-			<div class="panel panel-info">
-				<div class="panel-heading" data-toggle="collapse" data-target="#collapseRuleTable" aria-expanded="false" aria-controls="collapseExample">
+		<div class="col-xs-8">
+			<div class="panel panel-default">
+				<div class="panel-heading-custom-green" data-toggle="collapse" data-target="#collapseRuleTable" aria-expanded="false" aria-controls="collapseExample">
 					<span>
 					  Add Rules
 					</span>
 				</div>
 				<div class="panel-body">
 					<div id="collapseRuleTable" class="panel-collapse collapse in">
-						<table class="table table-striped table-bordered table-hover dataTable no-footer" tr-ng-grid=""
+						<table class="table table-hover dataTable no-footer" tr-ng-grid=""
 							items="availableRules" selected-items="selectedNewRules"
 							selection-mode="MultiRow" page-items="10">
 							<thead>
@@ -82,15 +93,6 @@
 								</tr>
 							</thead>
 						</table>
-					</div>
-					<div class="row">
-						<div class="form-group add-rule" id="btn-add-package">
-							<div class="btn-group-justified" role="group"
-								aria-label="Justified button group">
-								<a class="btn btn-primary" role="button"
-									ng-click="savePackage('')">Save New Rule</a>
-							</div>
-						</div>
 					</div>
 				</div>
 			</div>
