--- a/WebContent/WEB-INF/classes/partials/dashboard.html
+++ b/WebContent/WEB-INF/classes/partials/dashboard.html
@@ -10,7 +10,6 @@
         </ol>
     </div>
 </div>
-{{loading}}
 <div class="row" data-ng-show="!loading">
     <div class="row">
 		<div class="col-lg-3 col-md-6">
@@ -62,11 +61,11 @@
 		        <div class="panel-heading">
 		            <div class="row">
 		                <div class="col-xs-3">
-		                    <i class="fa fa-bomb fa-5x"></i>
+		                    <i class="fa fa-bell-o fa-5x"></i>
 		                </div>
 		                <div class="col-xs-9 text-right">
 		                    <div class="huge">3</div>
-		                    <div>New Alerts</div>
+		                    <div>New Claim Alerts</div>
 		                </div>
 		            </div>
 		        </div>
