--- a/WebContent/WEB-INF/classes/partials/package-builder.html
+++ b/WebContent/WEB-INF/classes/partials/package-builder.html
@@ -3,8 +3,7 @@
 	<ol class="breadcrumb">
 		<li class="active"><i class="fa fa-wrench"></i> Package Builder</li>
 	</ol>
-	<div class="col-md-3"
-		data-ng-show="loadingPackages">
+	<div class="col-md-3" data-ng-show="loadingPackages">
 		<div class="panel panel-default">
 			<div class="panel-heading-custom-green">
 				<div class="row">
@@ -30,50 +29,59 @@
 
 <div class="col-lg-12">
 	<div class="row">
-		<div class="col-xs-4">
+		<div class="col-xs-12">
 			<div class="panel panel-default">
 				<div class="panel-heading-custom-green">Package Details</div>
 				<div class="panel-body">
-					<div class="row">
-						<label class="medium" for="RuleName">Package Name</label>
-					</div>
-					<div class="row">
-						<input type="text" class="form-control"
-							placeholder="Enter Name" ng-model="newPackage.packageName" ng-required />
-					</div>
-					<br>
-					<div class="row">
-		                <div class="form-group add-rule">
-		                    <div class="btn-group-justified" role="group" aria-label="Justified button group">
-		                        <a class="btn btn-primary" role="button" ng-click="saveNewPackage()">Save New Package</a>
-		                    </div>
-		                </div>
-		            </div>
-		            <div class="panel panel-default">
-						<div class="panel-heading-custom-green">Package Rules</div>
-						<div class="panel-body">
-							<div class="list-group">
-								<table class="table table-hover dataTable no-footer" 
-									tr-ng-grid=""
-									items="selectedNewRules" 
-									page-items="10">
-									<thead>
-										<tr>
-											<th field-name="name" enable-filtering="false"></th>
-										</tr>
-									</thead>
-								</table>
+
+					<div class="col-xs-6">
+						<div class="form-group">
+							<label class="control-label" for="PackageName">Package
+								Name</label> <input type="text" class="form-control"
+								placeholder="Enter Name" ng-model="newPackage.packageName"
+								ng-required/>
+						</div>
+						<br>
+						<div class="form-group">
+							<div class="btn-group-justified" role="group"
+								aria-label="Justified button group">
+								<a class="btn btn-custom-orange" role="button"
+									ng-click="saveNewPackage()">Save New Package</a>
 							</div>
+						</div>
+					</div>
+					<div class="col-xs-6">
+						<div class="form-group">
+							<label class="control-label" for="PackageName">Package
+								Description</label>
+							<textarea type="text" class="form-control"
+								placeholder="Enter Description"
+								ng-model="newPackage.description" ng-required/>
+						
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-		<div class="col-xs-8">
+	</div>
+</div>
+
+<div class="col-lg-12">
+	<div class="row">
+		<div class="col-xs-6">
 			<div class="panel panel-default">
-				<div class="panel-heading-custom-green" data-toggle="collapse" data-target="#collapseRuleTable" aria-expanded="false" aria-controls="collapseExample">
-					<span>
-					  Add Rules
+				<div class="panel-heading-custom-green" data-toggle="collapse"
+					data-target="#collapseRuleTable" aria-expanded="false"
+					aria-controls="collapseExample">
+					<span> Select Rules for new package 
+						
+						<span class="pull-right">
+							Selected Rules 
+							<span class="default-badge">
+								{{selectedNewRules.length}}	
+							</span>
+						</span>
+						
 					</span>
 				</div>
 				<div class="panel-body">
@@ -83,15 +91,60 @@
 							selection-mode="MultiRow" page-items="10">
 							<thead>
 								<tr>
+									<th display-align="center" cell-width="2em">
+						                <div class="tr-ng-title">Selected</div>
+						                <input type="checkbox" ng-model="areAllSelected" ng-change="!areAllSelected?selectedNewRules.splice(0, selectedNewRules.length):selectedNewRules.push.apply(selectedNewRules, availableRules)">
+						            </th>
 									<th field-name="name" enable-filtering="false"></th>
 									<th field-name="description" display-name="Description"
 										enable-filtering="false"></th>
-									<th field-name="setting.recommendation" display-name="Investigation Recommendation"
-										enable-filtering="false" display-align="center"></th>
-									<th field-name="setting.score" display-name="Fraud Score"
+									<th field-name="setting.category" display-name="Category"
 										enable-filtering="false" display-align="center"></th>
 								</tr>
 							</thead>
+							<tbody>
+							    <tr>
+							        <td>
+							            <input type="checkbox" ng-model="isSelected" ng-checked="selectedNewRules.indexOf(gridItem)>=0" ng-change="isSelected?selectedNewRules.push(gridItem):selectedNewRules.splice(selectedNewRules.indexOf(gridItem),1)">
+							        </td>
+							    </tr>
+							</tbody>
+						</table>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-xs-6">
+			<div class="panel panel-default box-shaddow">
+				<div class="panel-heading-custom-green">Recommended Rules to
+					go with
+					<span class="default-badge">
+						{{SuggestedRulesFor}}	
+					</span>
+				</div>
+				<div class="panel-body">
+					<div id="collapseRuleTable" class="panel-collapse collapse in">
+						<table class="table table-hover dataTable no-footer" tr-ng-grid=""
+							items="relatedRules" selected-items="selectedNewRules"
+							selection-mode="MultiRow" page-items="10">
+							<thead>
+								<tr>
+									<th display-align="center" cell-width="2em">
+						                <div class="tr-ng-title">Selected</div>
+						                <input type="checkbox" ng-model="areAllSelected" ng-change="!areAllSelected?selectedNewRules.splice(0, selectedNewRules.length):selectedNewRules.push.apply(selectedNewRules, relatedRules)">
+						            </th>
+									<th field-name="name" enable-filtering="false"></th>
+									<th field-name="description" display-name="Description"
+										enable-filtering="false"></th>
+								</tr>
+							</thead>
+							<tbody>
+							    <tr>
+							        <td>
+							            <input type="checkbox" ng-model="isSelected" ng-checked="selectedNewRules.indexOf(gridItem)>=0" ng-change="isSelected?selectedNewRules.push(gridItem):selectedNewRules.splice(selectedNewRules.indexOf(gridItem),1)">
+							        </td>
+							    </tr>
+							</tbody>
 						</table>
 					</div>
 				</div>
@@ -99,3 +152,4 @@
 		</div>
 	</div>
 </div>
+{{relatedRules}} 
