--- a/WebContent/WEB-INF/classes/partials/package-manager.html
+++ b/WebContent/WEB-INF/classes/partials/package-manager.html
@@ -1,9 +1,8 @@
 <div class="row">
 	<div class="col-lg-12">
-		<h1 class="page-header">Packages</h1>
+		<h1 class="page-header">Package Manager</h1>
 		<ol class="breadcrumb">
-			<li class="active"><i class="fa fa-wrench"></i> Rule Engine
-				Packages</li>
+			<li class="active"><i class="fa fa-wrench"></i> Package Manager</li>
 		</ol>
 		<div class="col-md-3"
 			data-ng-show="loadingPackages">
@@ -21,7 +20,9 @@
 				</div>
 				<a href="#">
 					<div class="panel-footer">
-						<span class="pull-left">Packages</span> <span class="pull-right"><i
+						<span class="pull-left">Packages</span>
+						
+						 <span class="pull-right"><i
 							class="fa fa-arrow-circle-right"></i></span>
 						<div class="clearfix"></div>
 					</div>
@@ -29,24 +30,31 @@
 			</div>
 		</div>
 		
-		<div class="row" data-ng-show="!loadingPackages">
-			<div class="panel panel-default" ng-if="!isSelecetedPackage()">
-				<div class="panel-heading-custom-green">
-					<h1 class="panel-title">All Packages</h1>
-				</div>
-				<div class="panel-body">
-					<div class="package-list" ng-include
-						src="'partials/package-list.html'"></div>
-				</div>
-			</div>
+		<div class="row" data-ng-show="!loadingPackages" ng-if="!isSelecetedPackage()">
+			<div class="package-list" ng-include src="'partials/package-list.html'"></div>
 		</div>
 
 		<div class="row" ng-if="isSelecetedPackage()">
 			<div id="selected-package" ng-if="isSelecetedPackage()" ng-include
 				src="'partials/package-selected.html'"></div>
 		</div>
-
-		<div class="row row-centered" data-ng-show="isSelecetedPackage()">
+		
+		<div class="col-lg-12" ng-if="isSelecetedPackage() && !objectExist(selectedPackage.executions)">
+			<div class="panel panel-default">
+				<div class="panel-heading-custom-green">
+					<div class="row">
+						<div class="col-xs-3">
+							<i class="fa fa-bar-chart fa-5x"></i>
+						</div>
+						<div class="col-xs-9 text-right">
+							<div class="huge">There is No Execution History</div>
+							<div>No rule have been fired on this package</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="row row-centered" data-ng-show="isSelecetedPackage() && objectExist(selectedPackage.executions)">
 			<div class="panel panel-default">
 				<div class="panel-heading-custom-green" data-toggle="collapse"
 					data-target="#collapseStats" aria-expanded="false"
@@ -67,22 +75,6 @@
 										<div class="col-xs-9 text-right">
 											<div class="huge">Select a Package</div>
 										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-10  col-centered"
-						ng-if="isSelecetedPackage() && !objectExist(selectedPackage.executions)">
-						<div class="panel panel-default">
-							<div class="panel-heading-custom-green">
-								<div class="row">
-									<div class="col-xs-3">
-										<i class="fa fa-bar-chart fa-5x"></i>
-									</div>
-									<div class="col-xs-9 text-right">
-										<div class="huge">There is No Execution History</div>
-										<div>No rule have been fired on this package</div>
 									</div>
 								</div>
 							</div>
