--- a/WebContent/css/main.css
+++ b/WebContent/css/main.css
@@ -9,12 +9,17 @@ body {
 	margin-top: 100px;
 	background-color: #222;
 	color: #444444;
+	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 @media ( min-width :768px) {
 	body {
 		margin-top: 50px;
 	}
+}
+table {
+	padding-top: 0px;
+	margin-top: 0px;
 }
 
 #wrapper {
@@ -168,6 +173,11 @@ ul.alert-dropdown {
 	font-size: 40px;
 }
 
+.panel-body-table {
+  padding: 15px;
+  padding-top: 0px;
+}
+
 .panel-green {
 	border-color: #5cb85c;
 }
@@ -237,6 +247,7 @@ hr {
 	margin-top: 10px;
 	margin-bottom: 10px;
 }
+
 
 .form-group {
 	margin-bottom: 0px;
@@ -449,7 +460,9 @@ input.mini {
 	background-color: #00000;
 }
 
-
+.panel-default {
+	  box-shadow: 0px 0px 2px 2px #A3A3A3;
+}
 /* over-writing panel heading bg color to cv custom colors */
 .panel-default > .panel-heading-custom-green {
     background: #377d3c; 
@@ -478,11 +491,52 @@ input.mini {
 	border-top-right-radius: 3px;
 }
 
+.btn-custom-orange {
+	border-radius: 7px;
+	font-size: 16px;
+	color: #ffffff;
+	box-shadow: 0px 0px 2px 2px #A3A3A3;
+	border-color: #faa019;
+	margin-top: 11px;
+	margin-bottom: 11px;
+	font-weight: bold;
+	border-style: solid;
+	line-height: 25px;
+	background-color: #faa019;
+	background-image: none;
+}
+
+.btn-custom-red{
+	border-radius: 7px;
+	font-size: 16px;
+	color: #ffffff;
+	box-shadow: 0px 0px 2px 2px #A3A3A3;
+	border-color: #FF0000;
+	margin-top: 11px;
+	margin-bottom: 11px;
+	font-weight: bold;
+	border-style: solid;
+	line-height: 25px;
+	background-color: #FF0000;
+	background-image: none;
+}
+
+.btn-custom-orange:hover {
+    background-color: #a45e0d; 
+    color: #fff;
+	cursor: pointer;
+	box-shadow: 0px 0px 0px #000000;
+}
+
+.panel-body {
+  padding: 0px;
+}
+
 /*  new time line */
 
 body {
     padding:25px;
-    font-family:sans-serif;
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 .timeline {
     white-space:nowrap;
@@ -553,4 +607,96 @@ th {
 .active {
 	color: #faa019;
 	font-weight: bold;
+}
+
+/* setting the font*/
+
+h1 {
+	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-size: 24px;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 500;
+	line-height: 26.3999996185303px;
+}
+h3 {
+	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-size: 14px;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 500;
+	line-height: 15.3999996185303px;
+}
+p {
+	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-size: 14px;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 400;
+	line-height: 20px;
+}
+blockquote {
+	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-size: 21px;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 400;
+	line-height: 30px;
+}
+pre {
+	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-size: 13px;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 400;
+	line-height: 18.5714302062988px;
+}
+
+.default-badge {
+  display: inline-block;
+  min-width: 10px;
+  padding: 3px 7px;
+  font-size: 1em;
+  font-weight: 700;
+  line-height: 1;
+  color: #377d3c;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: baseline;
+  background-color: #FFF;
+  border-radius: 10px;
+  border-color: #fff;
+}
+
+.custom-list {
+  font-weight: bold;
+}
+
+.box-shaddow {
+	box-shadow: 2px 2px 2px #000000;
+}
+
+.round-button {
+    display:block;
+  	width: 6em;
+  	height: 6em;
+  	line-height: 5.5em;
+    border: 2px solid #f5f5f5;
+    border-radius: 50%;
+    color:#fff;
+    text-align:center;
+    text-decoration:none;
+    background: #faa019;
+    font-size: 20px;
+    box-shadow: 0 0 3px gray;
+    font-weight:bold;
+}
+
+.round-button:hover {
+    background: #262626;
+    color: #faa019;
+}
+.panel-heading{
+  background-color: #377d3c !important;
+  color: #377d3c !important;
 }
