--- a/WebContent/css/table.css
+++ b/WebContent/css/table.css
@@ -2,9 +2,9 @@
 <style type="text/css">
 
 	.flat-table {
-		margin-bottom: 20px;
+		margin-bottom: 18px;
 		border-collapse:collapse;
-		font-family: 'Lato', Calibri, Arial, sans-serif;
+		font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 		border: none;
                 border-radius: 2px;
                -webkit-border-radius: 3px;
