--- a/WebContent/partials/claims-score-board.html
+++ b/WebContent/partials/claims-score-board.html
@@ -1,129 +1,137 @@
 <div class="row">
-    <div class="col-lg-12">
-        <h1>
-            Scored Claims
-        </h1>
-        <ol class="breadcrumb">
-            <li class="active">
-                <i class="fa fa-flag"></i> Scored Claims
-            </li>
-        </ol>
-    </div>
+	<div class="col-lg-12">
+		<h1>Scored Claims</h1>
+		<ol class="breadcrumb">
+			<li class="active"><i class="fa fa-flag"></i> Scored Claims</li>
+		</ol>
+	</div>
 </div>
-
-<div class="row">
-    <div class="col-lg-12">
-    	<div class="panel panel-default">
-	        <div class="panel-heading-custom-green">
-	            <div class="row">
-	                <div class="col-xs-12">
-	                    <div class="medium">Execution List</div>
-	                    <div></div>
-	                </div>
-	            </div>
-	        </div>
-			<div class="panel-body">
+<div class="col-lg-12">
+	<div class="panel panel-default">
+		<div class="panel-heading-custom-green">
+			<div class="medium">
+				Execution Time Line
+			</div>
+			<div class="small">
+				Select an execution event from the time line below
+			</div>
+			<div></div>
+		</div>
+		<div class="panel-body">
 			<!-- Execution box -->
-				<div class="body">
-					<div class="bar"></div>
-					<div class="timeline">
-					    <div class="entry" ng-repeat="(key,val) in executions">
-						    <div class="panel panel-default" ng-click="calculateClaimsScores(key)">
-						        <div class="panel-heading-custom-orange" id="execution-item-heading">
-						            <div class="row row-centered">
-						                <div class="col-xs-12">
-						                    <div class="medium">{{key  | date:'EEE, dd MMM'}}</div>
-						                    <div></div>
-						                </div>
-						            </div>
-						             <div class="row row-centered">
-						                <div class="col-xs-12">
-						                    <div class="medium">{{key | date:" h:mma"}}</div>
-						                    <div></div>
-						                </div>
-						            </div>
-						             <div class="row row-centered">
-						                <div class="col-xs-12">
-						                    <div class="medium">Alerts: {{val.numberOfAlerts}}</div>
-						                    <div></div>
-						                </div>
-						            </div>
-						        </div>
-						    </div>
+			<div class="body">
+				<div class="bar"></div>
+				<div class="timeline">
+					<div class="entry" ng-repeat="(key,val) in executions">
+						<div class="panel panel-default"
+							ng-click="calculateClaimsScores(key)">
+							<div class="panel-heading-custom-orange"
+								id="execution-item-heading">
+								<div class="row row-centered">
+									<div class="col-xs-12">
+										<div class="medium">{{key | date:'EEE, dd MMM'}}</div>
+										<div></div>
+									</div>
+								</div>
+								<div class="row row-centered">
+									<div class="col-xs-12">
+										<div class="medium">{{key | date:" h:mma"}}</div>
+										<div></div>
+									</div>
+								</div>
+								<div class="row row-centered">
+									<div class="col-xs-12">
+										<div class="medium">Matched rules:
+											{{val.numberOfAlerts}}</div>
+										<div></div>
+									</div>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
-				<!-- Execution box -->
 			</div>
-	    </div>
-    	
-		
-	</div>
-</div>
-<div class="row">
-	<div class="col-xs-12">
-		<div class="panel panel-default">
-	        <div class="panel-heading-custom-green">
-	            <div class="row">
-	                <div class="col-xs-12">
-	                    <div class="medium">Scored Claims</div>
-	                    <div></div>
-	                </div>
-	            </div>
-	        </div>
-			<div class="panel-body">
-				<!-- Calculated table -->
-				<form name="calculated table" role="form">
-					<div class="form-group">
-						<div class="row">
-							<br>
-							<table
-								class="table table-bordered table-hover dataTable no-footer"
-								tr-ng-grid="" items="executionCalculated" selection-mode="SingleRow" selected-items="selectedClaim" page-items="10">
-								<thead>
-									<tr>
-										<th field-name="claimName" display-name="Claim Name"
-											enable-filtering="false"></th>
-										<th field-name="claimantName" display-name="Claimant Name"
-											enable-filtering="false"></th>
-										<th field-name="claim.cve__Status__c" display-name="Claim Status"
-											enable-filtering="false"></th>
-										<th field-name="claim.cve__BenefitType__c" display-name="Benefit Type"
-											enable-filtering="false"></th>
-										<th field-name="score" display-name="Score"
-											enable-filtering="false"></th>
-									</tr>
-								</thead>
-							</table>
-						</div>
-						<br>
-					</div>
-				</form>
-			</div>
+			<!-- Execution box -->
 		</div>
 	</div>
 </div>
-
-<div class="row">
-	<div class="col-xs-12">
+<div class="col-lg-12">
+	<div class="col-md-6" data-ng-show="objectExist(selectedClaim[0])">
 		<div class="panel panel-default">
-	        <div class="panel-heading-custom-green">
-	            <div class="row">
-	                <div class="col-xs-12">
-	                    <div class="medium">Score Breakdown</div>
-	                    <div></div>
-	                </div>
-	            </div>
-	        </div>
+			<div class="panel-heading-custom-green">
+				<h1 class="panel-title">
+					Score Breakdown of 
+					<span class="" ng-if="selectedClaim[0].claimName">{{selectedClaim[0].claimName}}, {{selectedClaim[0].claimantName}}</span>
+				</h1>
+			</div>
 			<div class="panel-body">
 				<!-- Calculated table -->
-				<div id="barChart">
-				</div>
+				<div id="barChart"></div>
 				<!-- List of Recommendations -->
-				<div>
-				
-				</div>
+				<div></div>
+			</div>
+		</div>
+	</div>
+	<div class="col-md-6" data-ng-show="objectExist(selectedClaim[0])">
+		<div class="panel panel-default">
+			<div class="panel-heading-custom-green">
+				<h1 class="panel-title">
+					<span ng-if="selectedClaim[0].claimName">{{selectedClaim[0].claimName}} Recommendations</span>
+				</h1>
+			</div>
+			<div class="panel-body">
+				<!-- Calculated table -->
+				<br>
+				<ul class="custom-list">
+					<li ng-repeat="recommendation in selectedClaim[0].recommendation">
+					
+						{{recommendation}}
+						
+					</li>
+				</ul>
 			</div>
 		</div>
 	</div>
 </div>
+<div class="col-lg-12" data-ng-show="objectExist(executionCalculated)">
+	<div class="panel panel-default">
+		<div class="panel-heading-custom-green">
+			<h1 class="panel-title"> 
+				<span class="default-badge">{{executionCalculated.length}}</span>
+				Scored Claims 
+			</h1>
+		</div>
+		<div class="panel-body">
+			<!-- Calculated table -->
+			<table class="table table-bordered table-hover dataTable no-footer"
+				tr-ng-grid="" items="executionCalculated" selection-mode="SingleRow"
+				selected-items="selectedClaim" page-items="10">
+				<thead>
+					<tr>
+						<th display-align="center" cell-width="2em">
+			                <div class="tr-ng-title">Selected</div>
+			            </th>
+						<th field-name="claimName" display-name="Claim Name"
+							enable-filtering="false"></th>
+						<th field-name="claimantName" display-name="Claimant Name"
+							enable-filtering="false"></th>
+						<th field-name="claim.cve__Status__c" display-name="Claim Status"
+							enable-filtering="false"></th>
+						<th field-name="claim.cve__BenefitType__c"
+							display-name="Benefit Type" enable-filtering="false"></th>
+						<th field-name="score" display-name="Score"
+							enable-filtering="false"></th>
+					</tr>
+				</thead>
+				<tbody>
+				    <tr>
+				        <td>
+				            <input type="checkbox" ng-model="isSelected" ng-checked="selectedClaim.indexOf(gridItem)>=0" ng-change="isSelected?selectedClaim.push(gridItem):selectedClaim.splice(selectedClaim.indexOf(gridItem),1)">
+				        </td>
+				    </tr>
+				</tbody>
+			</table>
+		</div>
+	</div>
+</div>
+{{executionCalculated}}
