--- a/WebContent/css/main.css
+++ b/WebContent/css/main.css
@@ -49,7 +49,7 @@ table {
 
 @media ( min-width :768px) {
 	#wrapper {
-		padding-left: 225px;
+		padding-left: 200px;
 	}
 	#page-wrapper {
 		padding: 10px;
@@ -178,22 +178,40 @@ ul.alert-dropdown {
   padding-top: 0px;
 }
 
+.panel-grey {
+	border-color: #444444;
+}
+
+.panel-grey > .panel-heading {
+	border-color: #444444;
+	color: #fff;
+	background-color: #444444;
+}
+
+.panel-grey a {
+	color: #faa019;
+}
+
+.panel-grey a:hover {
+	color: #b1650e;
+}
+
 .panel-green {
-	border-color: #5cb85c;
+	border-color: #377d3c;
 }
 
 .panel-green .panel-heading {
-	border-color: #5cb85c;
+	border-color: #377d3c;
 	color: #fff;
-	background-color: #5cb85c;
+	background-color: #377d3c;
 }
 
 .panel-green a {
-	color: #5cb85c;
+	color: #377d3c;
 }
 
 .panel-green a:hover {
-	color: #3d8b3d;
+	color: #53cd56;
 }
 
 .panel-red {
@@ -313,8 +331,18 @@ hr {
 }
 
 hr.thinGreen {
-	color: green;
+	color: black;
 	background-color: green;
+	height: 1px;
+	margin-left: 2%;
+	margin-right: 2%;
+	margin-top: 1%;
+	margin-bottom: 3%;
+}
+
+hr.thinRed {
+	color: black;
+	background-color: red;
 	height: 1px;
 	margin-left: 2%;
 	margin-right: 2%;
@@ -695,8 +723,4 @@ pre {
 .round-button:hover {
     background: #262626;
     color: #faa019;
-}
-.panel-heading{
-  background-color: #377d3c !important;
-  color: #377d3c !important;
 }
