--- a/WebContent/partials/dashboard.html
+++ b/WebContent/partials/dashboard.html
@@ -21,65 +21,22 @@
 		                </div>
 		                <div class="col-xs-9 text-right">
 		                    <div class="huge">12</div>
-		                    <div>New Claims</div>
+		                    <div>New Claims Received</div>
 		                </div>
 		            </div>
 		        </div>
-		        <a href="#">
+            	<a href="#/package-manager" ng-click="setRoute('partials/package-manager')">
 		            <div class="panel-footer">
-		                <span class="pull-left">View Details</span>
+		                <span class="pull-left">Execute a Package</span>
 		                <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
 		                <div class="clearfix"></div>
 		            </div>
 		        </a>
 		    </div>
 		</div>
+		
 		<div class="col-lg-3 col-md-6">
-		    <div class="panel panel-yellow">
-		        <div class="panel-heading">
-		            <div class="row">
-		                <div class="col-xs-3">
-		                    <i class="fa fa-calendar fa-5x"></i>
-		                </div>
-		                <div class="col-xs-9 text-right">
-		                    <div class="medium">Execution Schedule</div>
-		                    <div></div>
-		                </div>
-		            </div>
-		        </div>
-		        <a href="#">
-		            <div class="panel-footer">
-		                <span class="pull-left">View Details</span>
-		                <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-		                <div class="clearfix"></div>
-		            </div>
-		        </a>
-		    </div>
-		</div>
-		<div class="col-lg-3 col-md-6">
-		    <div class="panel panel-red">
-		        <div class="panel-heading">
-		            <div class="row">
-		                <div class="col-xs-3">
-		                    <i class="fa fa-bell-o fa-5x"></i>
-		                </div>
-		                <div class="col-xs-9 text-right">
-		                    <div class="huge">3</div>
-		                    <div>New Claim Alerts</div>
-		                </div>
-		            </div>
-		        </div>
-		        <a href="#">
-		            <div class="panel-footer">
-		                <span class="pull-left">View Details</span>
-		                <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-		                <div class="clearfix"></div>
-		            </div>
-		        </a>
-		    </div>
-		</div>
-		<div class="col-lg-3 col-md-6">
-		    <div class="panel panel-primary">
+		    <div class="panel panel-green">
 		        <div class="panel-heading">
 		            <div class="row">
 		                <div class="col-xs-3">
@@ -91,9 +48,32 @@
 		                </div>
 		            </div>
 		        </div>
-		        <a href="#">
+		       	<a href="#/package-manager" ng-click="setRoute('partials/package-manager')">
 		            <div class="panel-footer">
-		                <span class="pull-left">View Details</span>
+		                <span class="pull-left">View Packages</span>
+		                <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+		                <div class="clearfix"></div>
+		            </div>
+		        </a>
+		    </div>
+		</div>
+		
+		<div class="col-lg-3 col-md-6">
+		    <div class="panel panel-green">
+		        <div class="panel-heading">
+		            <div class="row">
+		                <div class="col-xs-3">
+		                    <i class="fa fa-bell-o fa-5x"></i>
+		                </div>
+		                <div class="col-xs-9 text-right">
+		                    <div class="huge">3</div>
+		                    <div>Latest Claim Alerts</div>
+		                </div>
+		            </div>
+		        </div>
+            	<a href="#/claims-score-board" ng-click="setRoute('partials/claims-score-board')">
+		            <div class="panel-footer">
+		                <span class="pull-left">View Score Board</span>
 		                <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
 		                <div class="clearfix"></div>
 		            </div>
@@ -101,65 +81,21 @@
 		    </div>
 		</div>
 		<div class="col-lg-3 col-md-6">
-		    <div class="panel panel-info">
+		    <div class="panel panel-green">
 		        <div class="panel-heading">
 		            <div class="row">
 		                <div class="col-xs-3">
 		                    <i class="fa fa-clipboard  fa-5x"></i>
 		                </div>
 		                <div class="col-xs-9 text-right">
-		                    <div class="huge">50</div>
-		                    <div>Claims Score Board</div>
+		                    <div class="huge">25</div>
+		                    <div>Rules</div>
 		                </div>
 		            </div>
 		        </div>
-		        <a href="#">
+            	<a href="#/rule-manager" ng-click="setRoute('partials/rule-manager')">
 		            <div class="panel-footer">
-		                <span class="pull-left">View Details</span>
-		                <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-		                <div class="clearfix"></div>
-		            </div>
-		        </a>
-		    </div>
-		</div>
-		<div class="col-lg-3 col-md-6">
-		    <div class="panel panel-warning">
-		        <div class="panel-heading">
-		            <div class="row">
-		                <div class="col-xs-3">
-		                    <i class="fa fa-clipboard  fa-5x"></i>
-		                </div>
-		                <div class="col-xs-9 text-right">
-		                    <div class="huge">23</div>
-		                    <div>Rule Statistics</div>
-		                </div>
-		            </div>
-		        </div>
-		        <a href="#">
-		            <div class="panel-footer">
-		                <span class="pull-left">View Details</span>
-		                <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-		                <div class="clearfix"></div>
-		            </div>
-		        </a>
-		    </div>
-		</div>
-		<div class="col-lg-3 col-md-6">
-		    <div class="panel panel-success">
-		        <div class="panel-heading">
-		            <div class="row">
-		                <div class="col-xs-3">
-		                    <i class="fa fa-clipboard  fa-5x"></i>
-		                </div>
-		                <div class="col-xs-9 text-right">
-		                    <div class="huge">23</div>
-		                    <div>Backward Chaining Model</div>
-		                </div>
-		            </div>
-		        </div>
-		        <a href="#">
-		            <div class="panel-footer">
-		                <span class="pull-left">View Details</span>
+		                <span class="pull-left">View Rule Manager</span>
 		                <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
 		                <div class="clearfix"></div>
 		            </div>
