--- a/WebContent/partials/package-builder.html
+++ b/WebContent/partials/package-builder.html
@@ -31,7 +31,9 @@
 	<div class="row">
 		<div class="col-xs-12">
 			<div class="panel panel-default">
-				<div class="panel-heading-custom-green">Package Details</div>
+				<div class="panel-heading-custom-green">
+					<h1 class="panel-title">Package Details</h1>
+				</div>
 				<div class="panel-body">
 
 					<div class="col-xs-6">
@@ -74,14 +76,12 @@
 					data-target="#collapseRuleTable" aria-expanded="false"
 					aria-controls="collapseExample">
 					<span> Select Rules for new package 
-						
 						<span class="pull-right">
 							Selected Rules 
 							<span class="default-badge">
 								{{selectedNewRules.length}}	
 							</span>
 						</span>
-						
 					</span>
 				</div>
 				<div class="panel-body">
