--- a/WebContent/partials/package-manager.html
+++ b/WebContent/partials/package-manager.html
@@ -2,7 +2,7 @@
 	<div class="col-lg-12">
 		<h1 class="page-header">Package Manager</h1>
 		<ol class="breadcrumb">
-			<li class="active"><i class="fa fa-wrench"></i> Package Manager</li>
+			<li class="active"><i class="fa fa-cogs"></i> Package Manager</li>
 		</ol>
 		<div class="col-md-3"
 			data-ng-show="loadingPackages">
